--- a/BTL/BTL.csproj
+++ b/BTL/BTL.csproj
@@ -203,6 +203,8 @@
     <Compile Include="Contact.aspx.designer.cs">
       <DependentUpon>Contact.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Converters\BaseConverter.cs" />
+    <Compile Include="Converters\RoleUserConverter.cs" />
     <Compile Include="Dashboard.aspx.cs">
       <DependentUpon>Dashboard.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
