--- a/BTL/Web.config
+++ b/BTL/Web.config
@@ -9,6 +9,8 @@
 		 providerName="System.Data.SqLClient" />
 	</connectionStrings>
 	<system.web>
+		<customErrors mode="Off"/>
+		<globalization culture="vi-VN" uiCulture="vi-VN" />
 		<compilation debug="true" targetFramework="4.7.2" />
 		<httpRuntime targetFramework="4.7.2" />
 		<pages>
