--- a/BTL/Web.config
+++ b/BTL/Web.config
@@ -13,7 +13,7 @@
 		<globalization culture="vi-VN" uiCulture="vi-VN" />
 		<compilation debug="true" targetFramework="4.7.2" />
 		<httpRuntime targetFramework="4.7.2" />
-		<pages>
+		<pages enableEventValidation="false">
 			<namespaces>
 				<add namespace="System.Web.Optimization" />
 			</namespaces>
